test: remove lazy provider tests and cleanup